refactor: EquipmentRoutineService 내부 toList를 Collectors.toList로 변경 (#161)